<resources>
    <string name="app_name">SpanishLaLiga</string>
    <string name="splash_text">SpanishLaLiga</string>
    <string name="team_text">Team Name:</string>
    <string name="stadium_text">Stadium:</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="team_description"> Team Description:</string>
    <string name="team_events">Next Events:</string>
    <string name="team_year">Team Foundation Year:</string>
    <string name="team_badge">Team Badge</string>
    <string name="team_jersey">Team Jersey</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="twitter">Twitter</string>
    <string name="website">Website</string>
    <string name="badge_description">It is the team badge</string>
    <string name="jersey_description">It is the team jersey</string>
    <string name="league_one">SPANISH LA LIGA</string>
    <string name="league_two">ENGLISH PREMIER</string>
    <string name="league_three">FRENCH LIGUE 1</string>
</resources>
