<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/team_badge"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:id="@+id/textView5"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.756"
                app:layout_constraintVertical_bias="0.011"/>

        <ImageView
                android:id="@+id/detail_badge"
                android:layout_width="178dp"
                android:layout_height="136dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.898"
                app:layout_constraintVertical_bias="0.416"/>

        <TextView
                android:text="@string/team_jersey"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.769"
                app:layout_constraintVertical_bias="0.304"
                android:id="@+id/textView6"/>

        <ImageView
                android:id="@+id/detail_jersey"
                android:layout_width="192dp"
                android:layout_height="132dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.891"
                app:layout_constraintVertical_bias="0.084"/>

        <TextView
                android:text="@string/team_text"
                android:textStyle="bold"
                android:layout_width="147dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintVertical_bias="0.577"
                android:id="@+id/textView4"/>

        <TextView
                android:text="@string/team_description"
                android:textStyle="bold"
                android:layout_width="139dp"
                android:layout_height="21dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.148"
                app:layout_constraintVertical_bias="0.648"/>

        <TextView
                android:text="@string/team_year"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintVertical_bias="0.793"/>

        <TextView
                android:text="@string/team_events"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.085"
                app:layout_constraintVertical_bias="0.854"/>

        <TextView
                android:layout_width="168dp"
                android:layout_height="23dp"
                android:id="@+id/team_name_detail"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.903"
                app:layout_constraintVertical_bias="0.576"/>

        <TextView
                android:layout_width="169dp"
                android:layout_height="90dp"
                android:id="@+id/team_description_detail"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.907"
                app:layout_constraintVertical_bias="0.707"/>

        <TextView
                android:layout_width="171dp"
                android:layout_height="92dp"
                android:id="@+id/team_events_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="224dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.942"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/team_year_detail"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.61"
                app:layout_constraintVertical_bias="0.793"/>
        <TextView
                android:text="@string/facebook"
                android:layout_width="66dp"
                android:layout_height="18dp"
                android:onClick="clickOnFacebook"
                android:visibility="invisible"
                android:textStyle="bold"
                android:id="@+id/facebook_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.112"/>
        <TextView
                android:text="@string/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickOnInstagram"
                android:visibility="invisible"
                android:textStyle="bold"
                android:id="@+id/instagram_text"
                android:layout_marginTop="168dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"/>
        <TextView
                android:text="@string/youtube"
                android:onClick="clickOnYoutube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textStyle="bold"
                android:id="@+id/youtube_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"
                android:layout_marginTop="236dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textStyle="bold"
                android:onClick="clickOnWebsite"
                android:id="@+id/website_text"
                android:layout_marginTop="56dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"/>
        <TextView
                android:text="@string/twitter"
                android:onClick="clickOnTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textStyle="bold"
                android:id="@+id/twitter_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp"
                android:layout_marginTop="296dp"
                app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>